--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.7.1",
     "customize-cra": "^1.0.0",
+    "echarts": "^4.9.0",
     "nprogress": "^0.2.0",
     "react": "^16.14.0",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.14.0",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "screenfull": "^5.0.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
