增加新组件

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "animate.css": "^4.1.1",
     "antd": "^4.7.1",
+    "braft-editor": "^2.3.9",
     "customize-cra": "^1.0.0",
     "echarts": "^4.9.0",
     "nprogress": "^0.2.0",
